Make a String hash fixable in hash lookup

When a delegator of a String value is passed to Hash lookup methods,
its hash method result is used. However, its value may differ from
the rb_str_hash result (which is used if String is directly passed)
since the delegator's hash method result loses some bits by ST2FIX.

To fix this issue, this makes any_hash to treat a string hash fixable.

Fixes [Bug #17488]